# ir-loader-g

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  agent.md  clean.py  clean_git.ps1
src/: editor.cpp  editor.h  processor.cpp  processor.h
